2023: Fix pom